refactor: Improve event handling in TileHighlighter and add tile highlighting on game events

--- a/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
+++ b/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
@@ -4,3 +4,12 @@
     -fx-background-size: stretch;
     -fx-background-position: center;
 }
+
+.tile.highlight-source {
+    -fx-border-color: yellow;
+    -fx-border-width: 3;
+}
+.tile.highlight-dest {
+    -fx-border-color: red;
+    -fx-border-width: 3;
+}
