style: Update tile cell styling to use a CSS class for consistency

--- a/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
+++ b/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
@@ -3,6 +3,14 @@
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
     -fx-background-position: center;
+
+    
+}
+
+.tile {
+    -fx-background-color: lightgray;
+    -fx-border-color: black;
+    -fx-border-width: 1;
 }
 
 .tile.highlight-source {
