--- a/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
+++ b/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
@@ -1,8 +1,8 @@
 .root {
-    -fx-background-image: url("edu/ntnu/idi/idatt/mappeoppgavev2025/images/Jungle-Background.png");
+    -fx-background-image: url("/edu/ntnu/idi/idatt/mappeoppgavev2025/images/Jungle-Background.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: stretch;
-    -fx-background-position: center;
+    -fx-background-size: cover;
+    -fx-background-position: center center;
 
     
 }
@@ -10,14 +10,14 @@
 .tile {
     -fx-background-color: lightgray;
     -fx-border-color: black;
-    -fx-border-width: 1;
+    -fx-border-width: 1px;
 }
 
 .tile.highlight-source {
     -fx-border-color: yellow;
-    -fx-border-width: 3;
+    -fx-border-width: 3px;
 }
 .tile.highlight-dest {
     -fx-border-color: red;
-    -fx-border-width: 3;
+    -fx-border-width: 3px;
 }
