--- a/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
+++ b/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
@@ -19,3 +19,13 @@
     -fx-border-color: red;
     -fx-border-width: 3px;
 }
+
+.tile.highlight-portal {
+    -fx-border-color: green;
+    -fx-border-width: 3px;
+}
+
+.tile.highlight-portal {
+    -fx-border-color: red;
+    -fx-border-width: 3px;
+}
