refactor: Update TileHighlighter to use lowercase comparison for message content

--- a/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
+++ b/src/main/resources/edu/ntnu/idi/idatt/mappeoppgavev2025/styles/styles.css
@@ -15,17 +15,23 @@
     -fx-border-color: yellow;
     -fx-border-width: 3px;
 }
-.tile.highlight-dest {
-    -fx-border-color: red;
-    -fx-border-width: 3px;
-}
 
 .tile.highlight-portal {
     -fx-border-color: green;
     -fx-border-width: 3px;
 }
 
-.tile.highlight-portal {
+.tile.highlight-dest-portal  {
+    -fx-border-color: green;
+    -fx-border-width: 3px;
+}
+
+.tile.highlight-trap {
+    -fx-border-color: red;
+    -fx-border-width: 3px;
+}
+
+.tile.highlight-dest-trap  {
     -fx-border-color: red;
     -fx-border-width: 3px;
 }
